--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -466,10 +466,10 @@ function obtenerProducto(id) {
             colors: ["Negro"] 
         },
         15: { 
-            name: "Calza Larga", 
-            price: 24999, 
+            name: "Calza Larga Mujer", 
+            price: 0, 
             images: {
-                "Negro": "assets/products/calza-larga.jpg"
+                "Negro": "calzalarga.png"
             }, 
             sizes: ["S", "M", "L", "XL"], 
             colors: ["Negro"] 
