--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -502,7 +502,7 @@ function obtenerProducto(id) {
             sizes: ["S", "M"], 
             colors: ["Blanco"] 
         },
-        33: { 
+        32: { 
             name: "Top satén liso con tirantes finos", 
             price: 21000, 
             images: {
@@ -511,6 +511,16 @@ function obtenerProducto(id) {
             }, 
             sizes: ["S", "M"], 
             colors: ["Negro", "Rojo"] 
+        },
+        33: { 
+            name: "Jogging Oversize", 
+            price: 24990, 
+            images: {
+                "Negro": "jogging.jpg",
+                "Blanco": "joggingblanco.jpg"
+            }, 
+            sizes: ["S", "M", "L"], 
+            colors: ["Negro", "Marron", "Verde", "Gris", "Blanco", "Azul"] 
         },
         37: { 
             name: "Jean wide leg animal print", 
