--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -222,7 +222,7 @@
                     <form id="form-compra">
                         <!-- Datos personales -->
                         <div class="selector">
-                            <label for="nombre">Nombre (o apodo):</label>
+                            <label for="nombre">Nombre y Apellido:</label>
                             <input type="text" id="nombre" name="nombre" required>
                         </div>
                         
