--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -305,7 +305,7 @@
                     <div id="resumen-detalle"></div>
                     <div id="info-pago" style="margin-top: 15px; padding: 10px; background: rgba(0, 243, 255, 0.05); border-radius: 8px; display: none;">
                         <p><strong>Alias Mercado Pago:</strong> nahuelguzzo</p>
-                        <p style="font-size: 0.8em; color: var(--neon-cyan);">(Para pagos por Mercado Pago o transferencia)</p>
+                        <p style="font-size: 0.8em; color: var(--neon-cyan);">(Para pagos solos por Transferencia)</p>
                     </div>
                 </div>
                 <button type="submit" form="form-compra" class="btn-comprar">
