--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -490,7 +490,7 @@ function obtenerProducto(id) {
                 "Gris": "buzopeluche.jpg"
             }, 
             sizes: ["S-M", "L-XL", "2XL-3XL"], 
-            colors: ["Gris"],
+            colors: ["Negro"],
             tags: ["mas-vendido"]
         },
         9: { 
