--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -427,10 +427,19 @@ function obtenerProducto(id) {
             price: 3999,
             oldPrice: 5000,
             images: {
-                "Negro": "cuello-negro.jpeg"
+                "Negro": "cuello-negro.jpeg",
+                 "Rojo": "",
+                 "Blanco": "",
+                 "Gris": "",
+                 "Nike": "",
+                 "Rosa": "",
+                 "Cian": "",
+                 "Militar": "",
+                 "Celeste": "",
+                 "Azul": ""
             }, 
             sizes: ["Único"], 
-            colors: ["Negro"],
+            colors: ["Negro", "Rojo", "Gris", "Nike", "Rosa", "Cian", "Militar", "Celeste", "Azul", "Blanco"],
             tags: ["oferta"],
             discount: 20
         },
