--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -428,15 +428,15 @@ function obtenerProducto(id) {
             oldPrice: 5000,
             images: {
                 "Negro": "cuello-negro.jpeg",
-                 "Rojo": "",
-                 "Blanco": "",
-                 "Gris": "",
-                 "Nike": "",
-                 "Rosa": "",
-                 "Cian": "",
-                 "Militar": "",
-                 "Celeste": "",
-                 "Azul": ""
+                 "Rojo": "Cuellorojo.png",
+                 "Blanco": "Cuelloblanco.png",
+                 "Gris": "Cuellogris.png",
+                 "Nike": "Cuellonike.png",
+                 "Rosa": "Cuellorosa.png",
+                 "Cian": "Cuellocian.png",
+                 "Militar": "Cuellomilitar.png",
+                 "Celeste": "Cuelloceleste.png",
+                 "Azul": "Cuelloazul.png"
             }, 
             sizes: ["Único"], 
             colors: ["Negro", "Rojo", "Gris", "Nike", "Rosa", "Cian", "Militar", "Celeste", "Azul", "Blanco"],
