--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -613,7 +613,7 @@ function obtenerProducto(id) {
                 "Negro": "assets/products/calza-corta-mujer.jpg"
             }, 
             sizes: ["XS", "S", "M", "L"], 
-            colors: ["Negro"],
+            colors: ["Negro", "Azul", "Blanco", "Cebra", "Celeste", "Galaxi", "Roja", "Rosa", "Verde/Rojo", "Verde"],
             tags: ["nuevo"]
         },
         20: { 
